// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Snapshots ClassName 1`] = `
<span
  className="sc-AykKC jifFQv className"
>
  hei
</span>
`;

exports[`Tag Snapshots No props 1`] = `
<span
  className="sc-AykKC jifFQv"
>
  This is a tag
</span>
`;

exports[`Tag Snapshots no Children 1`] = `
<span
  className="sc-AykKC jifFQv"
/>
`;
